// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`matches snapshots > matches default variant 1`] = `
<DocumentFragment>
  <div
    class="sc-eulNPF YwhNf aje-combobox aje-combobox--default is-medium"
  >
    <label
      class="sc-gFqAYk lgzaBE aje-label is-auto"
      for="react-aria-:r2:"
      id="react-aria-:r3:"
    >
      Text Label
    </label>
    <p
      class="sc-ikkyvV eBwNWL is-auto"
      id="react-aria-:r5:"
    >
      message
    </p>
    <div
      class="sc-fUnNpA fQcagR aje-combo-input padding-left padding-right"
    >
      <input
        aria-autocomplete="list"
        aria-describedby="react-aria-:r5:"
        aria-expanded="false"
        aria-labelledby="react-aria-:r3:"
        autocomplete="off"
        autocorrect="off"
        class="sc-feUYzb deCWvb is-full"
        id="react-aria-:r2:"
        role="combobox"
        spellcheck="false"
        type="text"
        value=""
      />
      <button
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-label="Show suggestions"
        aria-labelledby="react-aria-:r0: react-aria-:r3:"
        class="sc-imWZod sc-jXbVAB krOeTw cpWLcV aje-btn aje-btn--icon aje-btn--content is-auto"
        id="react-aria-:r0:"
        tabindex="-1"
        type="button"
      >
        <i
          aria-hidden="true"
          class="sc-kAycRU lbPEgw aje-icon material-icons is-auto"
        >
          search
        </i>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`matches snapshots > matches floating variant 1`] = `
<DocumentFragment>
  <div
    class="sc-eulNPF YwhNf aje-combobox aje-combobox--floating is-medium"
  >
    <div
      class="sc-hmdnzv cpuyuG"
    >
      <div
        class="sc-fUnNpA fQcagR aje-combo-input padding-left padding-right"
      >
        <input
          aria-autocomplete="list"
          aria-describedby="react-aria-:re:"
          aria-expanded="false"
          aria-labelledby="react-aria-:rc:"
          autocomplete="off"
          autocorrect="off"
          class="sc-feUYzb deCWvb is-full"
          id="react-aria-:rb:"
          role="combobox"
          spellcheck="false"
          type="text"
          value=""
        />
        <button
          aria-expanded="false"
          aria-haspopup="listbox"
          aria-label="Show suggestions"
          aria-labelledby="react-aria-:r9: react-aria-:rc:"
          class="sc-imWZod sc-jXbVAB krOeTw cpWLcV aje-btn aje-btn--icon aje-btn--content is-auto"
          id="react-aria-:r9:"
          tabindex="-1"
          type="button"
        >
          <i
            aria-hidden="true"
            class="sc-kAycRU lbPEgw aje-icon material-icons is-auto"
          >
            search
          </i>
        </button>
      </div>
      <label
        class="sc-gFqAYk lgzaBE aje-label is-auto"
        for="react-aria-:rb:"
        id="react-aria-:rc:"
      >
        Text Label
      </label>
    </div>
    <p
      class="sc-ikkyvV eBwNWL is-auto"
      id="react-aria-:re:"
    >
      message
    </p>
  </div>
</DocumentFragment>
`;
